--- a/package.json
+++ b/package.json
@@ -1,1 +1,37 @@
-{"name":"njs","version":"0.0.1","scripts":{"build":"nest build","start:dev":"nest start --watch","test":"jest","test:watch":"jest --watch","test:cov":"jest --coverage","test:debug":"node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand","test:e2e":"jest --config ./test/jest-e2e.json"},"dependencies":{"@mistralai/mistralai":"^1.7.5","@nestjs/common":"^10.0.0","@nestjs/config":"^4.0.2","@nestjs/core":"^10.0.0","@nestjs/platform-express":"^10.0.0","@nestjs/swagger":"^11.2.0","class-transformer":"^0.5.1","class-validator":"^0.14.2","langchain":"^0.3.30","reflect-metadata":"^0.1.13","rxjs":"^7.8.1"},"devDependencies":{"@nestjs/cli":"^10.0.0","@nestjs/testing":"^11.1.6","@types/jest":"^29.5.14","@types/supertest":"^6.0.3","jest":"^30.0.5","supertest":"^7.1.4","ts-jest":"^29.1.0","typescript":"^5.1.3"}}
+{
+    "name": "njs",
+    "version": "0.0.1",
+    "scripts": {
+        "build": "nest build",
+        "start:dev": "nest start --watch",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:cov": "jest --coverage",
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "test:e2e": "jest --config ./test/jest-e2e.json"
+    },
+    "dependencies": {
+        "@langchain/core": "^0.3.70",
+        "@mistralai/mistralai": "^1.7.5",
+        "@nestjs/common": "^10.0.0",
+        "@nestjs/config": "^4.0.2",
+        "@nestjs/core": "^10.0.0",
+        "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/swagger": "^11.2.0",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.2",
+        "langchain": "^0.3.30",
+        "reflect-metadata": "^0.1.13",
+        "rxjs": "^7.8.1"
+    },
+    "devDependencies": {
+        "@nestjs/cli": "^10.0.0",
+        "@nestjs/testing": "^11.1.6",
+        "@types/jest": "^29.5.14",
+        "@types/supertest": "^6.0.3",
+        "jest": "^30.0.5",
+        "supertest": "^7.1.4",
+        "ts-jest": "^29.1.0",
+        "typescript": "^5.1.3"
+    }
+}
