--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
     "name": "njs",
     "version": "0.0.1",
     "scripts": {
-        "build": "nest build",
+        "dev": "nest start --watch",
         "start:dev": "nest start --watch",
+        "docker:up": "docker-compose up --build",
+        "docker:down": "docker-compose down",
+        "docker:logs": "docker-compose logs -f",
+        "docker:restart": "docker-compose restart",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
@@ -11,6 +15,7 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@chroma-core/default-embed": "^0.1.8",
         "@langchain/core": "^0.3.70",
         "@mistralai/mistralai": "^1.7.5",
         "@nestjs/common": "^11.1.6",
@@ -18,6 +23,7 @@
         "@nestjs/core": "^11.1.6",
         "@nestjs/platform-express": "^11.1.6",
         "@nestjs/swagger": "^11.2.0",
+        "chromadb": "^3.0.12",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
         "langchain": "^0.3.30",
