Update environment example and RAG service improvements

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 MISTRAL_API_KEY=your_api_key
 MISTRAL_API_URL=https://api.mistral.ai/v1/chat/completions
 MISTRAL_MODEL=mistral-large-latest
+TWILIO_AUTH_TOKEN=
+GUEST_PHONE='whatsapp:+1429876535'
+TWILIO_PHONE='whatsapp:+14166438886'
