--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "@nestjs/core": "^11.1.6",
         "@nestjs/platform-express": "^11.1.6",
         "@nestjs/swagger": "^11.2.0",
+        "axios": "^1.11.0",
         "chromadb": "^3.0.12",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
+        "dotenv": "^17.2.1",
         "langchain": "^0.3.30",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
